Fix for layout issue

--- a/themes/nica/assets/style/pages/_cv.scss
+++ b/themes/nica/assets/style/pages/_cv.scss
@@ -88,4 +88,13 @@ main.page.cv {
       margin-left: 1rem;
     }
   }
+
+  @media only print {
+
+    .timeline-item {
+      &:before {
+        left: -2.7rem;
+      }
+    }
+  }
 }
